--- a/bootCamp/pom.xml
+++ b/bootCamp/pom.xml
@@ -43,6 +43,18 @@
 		   <scope>provided</scope>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>bootstrap</artifactId>
+			<version>5.1.3</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>jquery</artifactId>
+			<version>3.6.0</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
